--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Hello World!</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, quod aut, molestias quae sunt deserunt voluptates eos aspernatur at ratione! Atque quis recusandae numquam id, in accusantium sint tenetur assumenda.</p>
+        <h2>Hello!</h2>
+        <p>Changed!</p>
     </body>
 </html>
